--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^2.0",
+        "drupal/drupal8_zymphonies_theme": "^1.4",
         "drupal/field_group": "^1.0",
         "drupal/field_permissions": "^1.0@RC",
         "drupal/geolocation": "^1.11",
