installation module adress

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/address": "^1.6",
         "drupal/admin_toolbar": "^1.26",
         "drupal/backup_migrate": "^4.0",
         "drupal/chosen": "^2.7",
