--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -2,6 +2,7 @@ module:
   address: 0
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  administerusersbyrole: 0
   automated_cron: 0
   backup_migrate: 0
   big_pipe: 0
