add participants of program

--- a/config/sync/administerusersbyrole.settings.yml
+++ b/config/sync/administerusersbyrole.settings.yml
@@ -1,3 +1,6 @@
-roles: {  }
+roles:
+  participant: unsafe
+  gestionnaire_de_programme: unsafe
+  webmaster: unsafe
 _core:
   default_config_hash: UiTY9bhUKWJOIWDlOKM3akeeyHuJJRspXETsv3SY6jw
