permission for hotel view role

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -13,6 +13,7 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'grant own content access'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
