--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/chosen": "^2.7",
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
+        "drupal/content_access": "^1.0@alpha",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^2.0",
         "drupal/drupal8_zymphonies_theme": "^1.4",
