--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -19,6 +19,7 @@ module:
   config_filter: 0
   config_split: 0
   contact: 0
+  content_access: 0
   content_moderation: 0
   contextual: 0
   ctools: 0
