--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -15,6 +15,8 @@ permissions:
   - 'edit field_budget'
   - 'edit own comments'
   - 'edit own field_budget'
+  - 'grant content access'
+  - 'grant own content access'
   - 'use advanced search'
   - 'use text format full_html'
   - 'view field_budget'
